--- a/package.json
+++ b/package.json
@@ -2,13 +2,11 @@
   "name": "psyreports-pro-desktop",
   "private": true,
   "version": "1.0.0",
-  "description": "PsyReports Pro Desktop App",
-  "author": "PsyReports",
   "type": "module",
   "main": "main.js",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "preview": "vite preview",
     "electron:build": "vite build && electron-builder"
   },
@@ -20,10 +18,11 @@
     "@google/genai": "^0.1.1"
   },
   "devDependencies": {
-    "@types/node": "^20.11.0",
-    "@vitejs/plugin-react": "^4.2.0",
+    "@types/react": "^18.2.64",
+    "@types/react-dom": "^18.2.21",
+    "@vitejs/plugin-react": "^4.2.1",
     "typescript": "^5.3.0",
-    "vite": "^5.1.0",
+    "vite": "^5.1.4",
     "electron": "^29.1.0",
     "electron-builder": "^24.13.0"
   },
