--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "main.js",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview",
     "electron:build": "vite build && electron-builder"
   },
@@ -15,11 +15,10 @@
     "react-dom": "^18.2.0",
     "lucide-react": "^0.344.0",
     "recharts": "^2.12.0",
-    "@google/genai": "^0.1.1"
+    "@google/genai": "*"
   },
   "devDependencies": {
-    "@types/react": "^18.2.64",
-    "@types/react-dom": "^18.2.21",
+    "@types/node": "^20.11.0",
     "@vitejs/plugin-react": "^4.2.1",
     "typescript": "^5.3.0",
     "vite": "^5.1.4",
